[gd_scene load_steps=18 format=3 uid="uid://by1bi0miuud7i"]

[ext_resource type="PackedScene" uid="uid://48qfybefw3aa" path="res://card.tscn" id="1_8fvkg"]
[ext_resource type="Script" path="res://battle.gd" id="1_flmcs"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="1_xgkp0"]
[ext_resource type="Texture2D" uid="uid://di6egicjkh32r" path="res://art/card deck space.png" id="3_b0d62"]
[ext_resource type="Texture2D" uid="uid://d1bskddfm5bji" path="res://art/Player.png" id="4_bpe10"]
[ext_resource type="Texture2D" uid="uid://ccf6n26hnpsx7" path="res://art/Enemy.png" id="5_nqs84"]
[ext_resource type="Texture2D" uid="uid://bdky0m17w7ynf" path="res://art/effort.png" id="6_12q4i"]
[ext_resource type="Shader" path="res://edge_glow.gdshader" id="8_8uf1w"]
[ext_resource type="Script" path="res://color_rect.gd" id="9_8ldaj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wimrh"]
shader = ExtResource("1_xgkp0")
shader_parameter/blur_power = 0.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsbja"]
size = Vector2(731, 204)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mi3ks"]
bg_color = Color(0.0943559, 0.253403, 0.275361, 0.996078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_isxt2"]
bg_color = Color(0.997617, 0.102632, 0.073368, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrubk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wdht"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ov0cb"]
shader = ExtResource("8_8uf1w")
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_strength = 1.0
shader_parameter/edge_width = 0.16
shader_parameter/hovered = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjdb5"]
size = Vector2(729, 212)

[node name="Battle" type="Node2D"]
material = SubResource("ShaderMaterial_wimrh")
script = ExtResource("1_flmcs")
card_scene = ExtResource("1_8fvkg")

[node name="Hand" type="Area2D" parent="."]

[node name="HandCollisionShape2D" type="CollisionShape2D" parent="Hand"]
position = Vector2(579, 495)
shape = SubResource("RectangleShape2D_rsbja")

[node name="Card" parent="." instance=ExtResource("1_8fvkg")]
z_index = 1

[node name="DeckPlacement" type="Sprite2D" parent="."]
position = Vector2(103, 536)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_b0d62")

[node name="PlayedPlacement" type="Sprite2D" parent="."]
position = Vector2(1048, 538)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_b0d62")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(360, 200)
texture = ExtResource("4_bpe10")

[node name="HealthBar" type="ProgressBar" parent="Player"]
offset_left = -83.0
offset_top = -155.0
offset_right = 66.0
offset_bottom = -128.0
theme_override_styles/background = SubResource("StyleBoxFlat_mi3ks")
theme_override_styles/fill = SubResource("StyleBoxFlat_isxt2")
max_value = 50.0
value = 26.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="Player/HealthBar"]
layout_mode = 0
offset_left = 57.0
offset_top = 2.0
offset_right = 97.0
offset_bottom = 25.0
text = "50/50"

[node name="BlockBar" type="ProgressBar" parent="Player"]
offset_left = -81.0
offset_top = -153.0
offset_right = 66.0
offset_bottom = -130.0
theme_override_styles/background = SubResource("StyleBoxFlat_vrubk")
theme_override_styles/fill = SubResource("StyleBoxFlat_1wdht")
max_value = 50.0
value = 20.0
show_percentage = false

[node name="BlockLabel" type="Label" parent="Player/BlockBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Enemy" type="Sprite2D" parent="."]
position = Vector2(709, 197)
scale = Vector2(0.556411, 0.546729)
texture = ExtResource("5_nqs84")

[node name="HealthBar" type="ProgressBar" parent="Enemy"]
offset_left = -140.184
offset_top = -276.188
offset_right = 109.816
offset_bottom = -223.188
theme_override_styles/background = SubResource("StyleBoxFlat_mi3ks")
theme_override_styles/fill = SubResource("StyleBoxFlat_isxt2")
max_value = 50.0
value = 26.0
show_percentage = false

[node name="Label" type="Label" parent="Enemy/HealthBar"]
layout_mode = 0
offset_left = 89.8615
offset_top = 3.65809
offset_right = 169.862
offset_bottom = 46.6581
theme_override_font_sizes/font_size = 30
text = "50/50"

[node name="BlockBar" type="ProgressBar" parent="Enemy"]
offset_left = -137.0
offset_top = -274.0
offset_right = 108.0
offset_bottom = -227.0
theme_override_styles/background = SubResource("StyleBoxFlat_vrubk")
theme_override_styles/fill = SubResource("StyleBoxFlat_1wdht")
max_value = 50.0
value = 20.0
show_percentage = false

[node name="BlockLabel" type="Label" parent="Enemy/BlockBar"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 541.0
offset_top = 597.0
offset_right = 619.0
offset_bottom = 633.0
text = "End Turn"

[node name="EffortLevel" type="Sprite2D" parent="."]
position = Vector2(982, 67)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_12q4i")

[node name="EffortLabel" type="Label" parent="EffortLevel"]
offset_left = -220.0
offset_top = -230.0
offset_right = 260.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ov0cb")
offset_left = 215.0
offset_top = 98.0
offset_right = 944.0
offset_bottom = 310.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0)
script = ExtResource("9_8ldaj")

[node name="PlayArea" type="Area2D" parent="ColorRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/PlayArea"]
position = Vector2(364, 106)
shape = SubResource("RectangleShape2D_tjdb5")

[connection signal="area_entered" from="Hand" to="." method="_on_hand_area_entered"]
[connection signal="area_exited" from="Hand" to="." method="_on_hand_area_exited"]
[connection signal="clicked" from="Card" to="." method="_on_card_clicked"]
[connection signal="button_down" from="Button" to="." method="end_turn"]
[connection signal="area_entered" from="ColorRect/PlayArea" to="." method="_on_play_area_entered"]
[connection signal="area_exited" from="ColorRect/PlayArea" to="." method="_on_play_area_exited"]
